fix: rename file

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 <div class="notification success hidden"></div>
 <div class="notification warning hidden"></div>
 
-<script src="js/.env.js"></script>
+<script src="js/env.js"></script>
 <script src="js/Nova_post.js"></script>
 <script src="js/data.js"></script>
 <script src="js/slider.js"></script>
